src/Core/include/iPhoneMirror/LinuxPreviewApi.h

// Layout is fixed: the managed struct mirrors it field for field, and
// im_linux_preview_abi_size exists so a mismatch fails loudly at startup rather
// than corrupting memory the way the S3 spike's did.
struct LinuxPreviewSurface {
    std::int32_t valid;
    std::int32_t memory_fd;
    std::int32_t render_completed_fd;
    std::int32_t available_fd;
    std::uint32_t width;
    std::uint32_t height;
    std::uint32_t vk_format;
    std::uint32_t reserved;
    std::uint64_t allocation_size;
    std::uint64_t allocation_offset;
};
 // namespace iPhoneMirror

// Size of LinuxPreviewSurface as this library sees it.
IM_API std::uint32_t IM_CALL im_linux_preview_abi_size();
// Creates the preview renderer at the given target size. device_uuid points at
// the importer's 16-byte Vulkan physical-device UUID, or is null to let
// libplacebo choose. Pass it: on a multi-GPU machine an image exported from one
// device cannot be imported by a compositor on another, and the failure surfaces
// only when the first frame is presented.
//
// Returns Ok, or CaptureBackendUnavailable with the reason recorded — a machine
// with no usable Vulkan device is an ordinary case, not a crash.
IM_API std::int32_t IM_CALL im_linux_preview_open(std::uint32_t width,
    std::uint32_t height, const std::uint8_t* device_uuid);
IM_API void IM_CALL im_linux_preview_close();
// Fills the descriptor the importer binds. Fails when no preview is open or the
// platform cannot export, and in the latter case `valid` is zero rather than the
// call reporting success.
IM_API std::int32_t IM_CALL im_linux_preview_describe(
    iPhoneMirror::LinuxPreviewSurface* surface);
// Renders one tightly packed NV12 frame. Present so the surface can be exercised
// before the capture session is wired to the renderer; the streaming path will
// drive the renderer directly rather than through this call.
IM_API std::int32_t IM_CALL im_linux_preview_present_nv12(
    const std::uint8_t* data, std::uint64_t size, std::uint32_t width,
    std::uint32_t height);
// Presents the running capture session's newest decoded frame. Returns Ok when a
// frame was rendered, DeviceNotFound when the session has produced none yet
// (which is normal while the handshake runs, not an error the caller should
// report), and CaptureBackendUnavailable when there is no preview or the render
// failed.
IM_API std::int32_t IM_CALL im_linux_preview_present_latest();