src/Core/include/iPhoneMirror/CoreApi.h

 // namespace iPhoneMirror

IM_API std::int32_t IM_CALL im_initialize();
// Extended start entry point. play_audio is a C ABI boolean (0 = disabled,
// nonzero = render the captured system PCM to the default Windows endpoint).
IM_API std::int32_t IM_CALL im_start_capture_ex(const wchar_t* udid, std::int32_t play_audio);
IM_API std::int32_t IM_CALL im_stop_capture();
IM_API const wchar_t* IM_CALL im_last_error();